--- a/src/common/button/Button.module.css
+++ b/src/common/button/Button.module.css
@@ -1,9 +1,9 @@
 .button {
-    background-color: #FAFBFC;
+    background-color: #21268F;
     border: 1px solid rgba(27, 31, 35, 0.15);
-    border-radius: 6px;
-    box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0, rgba(255, 255, 255, 0.25) 0 1px 0 inset;
-    color: #24292E;
+    border-radius: 30px;
+    box-shadow: 0px 4px 18px rgba(33, 38, 143, 0.35), inset 0px 1px 0px rgba(255, 255, 255, 0.3);
+    color: #ECECF9;
     cursor: pointer;
     display: inline-block;
     font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
@@ -19,10 +19,10 @@
 }
 
 .button:hover {
-    background-color: lightslategrey;
+    background-color: #D7D8EF;
     text-decoration: none;
     transition-duration: 0.1s;
-    color: #EDEFF2;
+    color: #21268F;
 }
 
 .button:disabled {
@@ -33,7 +33,8 @@
 }
 
 .button:active {
-    background-color: #EDEFF2;
+    background-color: #D7D8EF;
+    color: #21268F;
     box-shadow: rgba(225, 228, 232, 0.2) 0 1px 0 inset;
     transition: none 0s;
 }
