--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -2,7 +2,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #212429;
+    height: 60px;
+    background: #EBE0E9;
+
+
+
 }
 
 .navbar_list {
@@ -11,10 +15,14 @@
     align-items: center;
     border-radius: 4px;
     height: 52px;
+
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 15px;
 }
 
 .navbar_item {
-    color: #f6f4e6;
+    color: #2D2E46;
     text-decoration: none;
     text-transform: uppercase;
     transition: all 0.3s ease;
@@ -23,19 +31,19 @@
 }
 
 .active {
-    color: #f6f4e6;
     text-decoration: none;
     text-transform: uppercase;
     transition: all 0.3s ease;
     font-weight: 600;
     padding: 15px 10px 14px;
-    color: #212429;
-    background: #f6b750;
+    background: #DCCCDB;
+    border-bottom: 3px;
+    border-bottom-color: #21268F;
+    color: #2D2E46;
 }
 
 .navbar_list a:hover {
-    color: #212429;
-    background: #f6b750;
+    background: #DCCCDB;
 }
 
 .navbar_list a:not(:last-child) {
