--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background: linear-gradient(180deg, #E6D4DE 0%, #9890C7 100%);
+  height: 100vh;
 }
 
 code {
