--- a/src/common/form/Form.module.css
+++ b/src/common/form/Form.module.css
@@ -1,13 +1,18 @@
 .wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     width: 413px;
     height: 600px;
     margin: 60px auto 0;
+    padding: 80px 0 0 0;
     background: #F9F9FE;
     border-radius: 8px;
+}
+
+.title {
+    margin-bottom: 2rem;
 }
 
 .form {
@@ -15,13 +20,4 @@
     flex-direction: column;
     align-items: center;
     width: 250px;
-}
-
-.form input {
-    width: 100%;
-}
-
-.form input[type='text'],
-.form label {
-    margin-bottom: 1.5rem;
 }
