--- a/src/common/inputText/InputText.module.css
+++ b/src/common/inputText/InputText.module.css
@@ -1,24 +1,30 @@
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 100%;
+    height: 55px;
+}
+
 .input {
     padding: 8px;
     border-radius: 4px;
     outline: none;
     border: 1px solid steelblue;
+    transition: all 0.3s ease;
+    width: 100%;
+    position: relative;
 }
 
 .input:focus {
-    box-shadow: 0px 2px 13px 1px rgba(34, 60, 80, 0.2);
+    box-shadow: 0px 1px 8px 1px #9890C7;
 }
 
-.superInput {
-    border: 1px solid steelblue;
-}
-
-.errorInput {
-    background: red;
+.error_input {
+    border: 1px solid red;
 }
 
 .error {
     color: red;
-    margin-bottom: 10px;
-    margin-top: -31px;
 }
