--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -2,11 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60px;
     background: #EBE0E9;
-
-
-
 }
 
 .navbar_list {
@@ -14,8 +10,6 @@
     justify-content: space-between;
     align-items: center;
     border-radius: 4px;
-    height: 52px;
-
     max-width: 1100px;
     margin: 0 auto;
     padding: 0 15px;
@@ -26,26 +20,27 @@
     text-decoration: none;
     text-transform: uppercase;
     transition: all 0.3s ease;
-    font-weight: 600;
-    padding: 15px 10px 14px;
+    font-weight: var(--fw-normal);
+    padding: 15px 10px 12px;
+    border-bottom: 3px solid #EBE0E9;
 }
 
 .active {
     text-decoration: none;
     text-transform: uppercase;
     transition: all 0.3s ease;
-    font-weight: 600;
-    padding: 15px 10px 14px;
+    font-weight: var(--fw-normal);
+    padding: 15px 10px 12px;
     background: #DCCCDB;
-    border-bottom: 3px;
-    border-bottom-color: #21268F;
+    border-bottom: 3px solid #21268F;
     color: #2D2E46;
 }
 
 .navbar_list a:hover {
     background: #DCCCDB;
+    border-bottom: 3px solid #21268F;
 }
 
 .navbar_list a:not(:last-child) {
-    margin-right: 30px;
+    margin-right: 5px;
 }
