--- a/src/features/login/Login.module.css
+++ b/src/features/login/Login.module.css
@@ -4,10 +4,6 @@
     margin-bottom: 2rem;
 }
 
-/*.wrapper {*/
-/*    margin-bottom: 0.5rem;*/
-/*}*/
-
 .input {
     margin-bottom: 1.5rem!important;
     width: 100%;
@@ -19,5 +15,18 @@
     justify-content: flex-end;
     margin-left: auto;
     margin-bottom: 3rem;
+    text-decoration: none;
+}
+
+.text {
+    color: rgba(45, 46, 70, 0.5);
+    margin-bottom: 1rem;
+}
+
+.link {
+    color: #21268F;
+    font-size: var(--fs-md);
+    font-weight: var(--fw-normal);
+    text-align: center;
     text-decoration: none;
 }
