--- a/src/common/button/Button.module.css
+++ b/src/common/button/Button.module.css
@@ -25,11 +25,14 @@
     color: #21268F;
 }
 
-.button:disabled {
+.button:disabled,
+.button[disabled]{
     background-color: #FAFBFC;
     border-color: rgba(27, 31, 35, 0.15);
     color: #959DA5;
     cursor: default;
+    pointer-events: none;
+    box-shadow: rgba(225, 228, 232, 0.2) 0 1px 0 inset;
 }
 
 .button:active {
