--- a/src/common/form/Form.module.css
+++ b/src/common/form/Form.module.css
@@ -19,5 +19,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 250px;
+    width: 90%;
+}
+
+@media (max-width: 991.98px) {}
+
+@media (max-width: 767.98px) {
+    .wrapper {
+        width: 350px;
+        padding: 30px 0 0 0;
+        height: 500px
+    }
+}
+
+@media (max-width: 479.98px) {
+    .wrapper {
+        width: 250px;
+    }
 }
