--- a/src/features/recoveryPass/sendEmail/SendEmail.module.css
+++ b/src/features/recoveryPass/sendEmail/SendEmail.module.css
@@ -11,20 +11,28 @@
     border-radius: 8px;
 }
 
-.image {
-    background-color: rgba(45, 46, 70, 0.5);
-    display: block;
+.image_wrapper {
     width: 120px;
     height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 100%;
+    margin-bottom: 2rem;
+    background-color: #D7D8EF;
+}
+
+.image {
+    display: block;
+    width: 65px;
     object-fit: cover;
     object-position: center;
-    margin-bottom: 2rem;
 }
 
 .title {
-   margin-bottom: 2rem;
-   text-align: center;
+    margin-bottom: 2rem;
+    text-align: center;
+    color: #2D2E46;
 }
 
 .subtitle {
