--- a/src/features/setPass/SetPassword.module.css
+++ b/src/features/setPass/SetPassword.module.css
@@ -33,3 +33,31 @@
     text-decoration: none;
     cursor: pointer;
 }
+
+@media (max-width: 991.98px) {}
+
+@media (max-width: 767.98px) {
+    .title {
+        margin-bottom: 3rem;
+        width: 250px;
+    }
+
+    .container {
+        height: 380px;
+    }
+}
+
+@media (max-width: 479.98px) {
+    .title {
+        margin-bottom: 4rem;
+        width: 180px;
+    }
+
+    .subtitle {
+        width: 180px;
+    }
+
+    .container {
+        height: 400px;
+    }
+}
