refactor: update some code

--- a/src/features/packsList/showPacks/ShowPacks.module.css
+++ b/src/features/packsList/showPacks/ShowPacks.module.css
@@ -58,3 +58,9 @@
     outline: 1px transparent;
 }
 
+.btn_active {
+    background: #9A91C8!important;
+    color: #FFFFFF!important;
+    box-shadow: none!important;
+}
+
