--- a/src/features/packsList/tablePacks/TablePacks.module.css
+++ b/src/features/packsList/tablePacks/TablePacks.module.css
@@ -35,9 +35,9 @@
 }
 
 .now_packs {
-    text-align: center;
-    padding: 20px;
-    font-size: 20px;
-    font-weight: 800;
-    letter-spacing: 1px;
+    text-align: center!important;
+    padding: 20px!important;
+    font-size: 20px!important;
+    font-weight: 800!important;
+    letter-spacing: 1px!important;
 }
