--- a/src/features/packName/tableCardName/tableCardName.module.css
+++ b/src/features/packName/tableCardName/tableCardName.module.css
@@ -7,30 +7,37 @@
     flex-direction: column;
     margin: 24px auto 0;
 }
+
 .table_title {
     font-weight: 800;
     font-size: 22px;
     color: #2D2E46;
     letter-spacing: 1px;
+    padding-left: 10px;
 }
 
 .arrowBackSharpIcon {
-    padding-top: 5px;
-    color: #2D2E46;
+    display: flex;
+    justify-content: flex-start;
 }
 
 .inputContainer {
     display: flex;
-    justify-content: space-between;
+    align-items: stretch;
     margin: 30px 0 30px 0;
+}
+
+.button {
+     margin-left: 30px;
 }
 
 .paginationContainer {
     margin-top: 30px;
 }
+
 .icon {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .now_cards {
@@ -39,4 +46,13 @@
     font-size: 20px;
     font-weight: 800;
     letter-spacing: 1px;
+}
+.button_group button:disabled,
+.button_group button[disabled] {
+    background-color: #FAFBFC;
+    border-color: rgba(27, 31, 35, 0.15);
+    color: #959DA5;
+    cursor: default;
+    pointer-events: none;
+    box-shadow: none;
 }
